feat: added new endpoint for remotecomponent
